# application-services

./: .buildconfig-android.yml  CHANGELOG.md  CHANGES_UNRELEASED.md  Cargo.toml  build.gradle  publish.gradle  try_to_crash_places.sh  try_to_crash_places.swift  try_to_crash_places_reuse_conn.swift  try_to_crash_places_use_conn_once.swift
automation/: prepare-release.py
components/fxa-client/doc/: state-machine.md
components/fxa-client/src/: fxa_client.udl
components/fxa-client/src/internal/: mod.rs
components/fxa-client/src/state_machine/: logic.rs  mod.rs  types.rs
components/logins/: Cargo.toml  uniffi.toml
components/logins/android/: build.gradle
components/logins/src/: error.rs  lib.rs  logins.udl  store.rs
components/places/: uniffi.toml
components/places/src/: ffi.rs  places.udl
components/places/src/storage/: mod.rs
components/remote_settings/src/: client.rs  config.rs  lib.rs  storage.rs
components/suggest/src/: db.rs  geoname.rs  schema.rs  store.rs  util.rs  weather.rs
components/suggest/src/benchmarks/: ingest.rs
components/support/error/: Cargo.toml
components/support/guid/: Cargo.toml
components/support/interrupt/: Cargo.toml
components/support/sql/: Cargo.toml
components/support/sync15-traits/: Cargo.toml
components/sync15/src/: lib.rs
components/viaduct/: Cargo.toml
examples/places-async/: .gitignore  Cargo.toml
examples/places-async/bindings/: places_example.kts  places_example.swift
examples/places-async/src/: db.rs  lib.rs  network.rs  places.udl
libs/: verify-android-ci-environment.sh
(+7 files in other folders)
