[package]
name = "places-async"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["lib", "cdylib"]

[dependencies]
camino = "1.0.8"
parking_lot = "0.12.1"
uniffi = "0.25.0"
uniffi_bindgen = "0.25.0"

[build-dependencies]
uniffi = { version = "0.25.0", features = ["build"] }

[[bin]]
name = "kotlin"

[[bin]]
name = "swift"
