[package]
name = "places-async"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["lib", "cdylib"]

[dependencies]
async-mutex = "1.4"
camino = "1.0.8"
parking_lot = "0.12.1"
uniffi = { branch = "blocking-task-queue", git = "https://github.com/bendk/uniffi-rs.git" }
uniffi_bindgen = { branch = "blocking-task-queue", git = "https://github.com/bendk/uniffi-rs.git" }

[build-dependencies]
uniffi = { branch = "blocking-task-queue", git = "https://github.com/bendk/uniffi-rs.git", features = ["build"] }

[[bin]]
name = "kotlin"

[[bin]]
name = "swift"
